--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner</title>
-
-  <link rel="stylesheet" href="jasmine-core/lib/jasmine-core/jasmine.css">
-
-  <script src="jasmine-core/lib/jasmine-core/jasmine.js"></script>
-  <script src="jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-  <script src="jasmine-core/lib/jasmine-core/boot.js"></script>
   
+  <!-- include sinon-chrome files here... -->
   <script src="sinon-chrome/bundle/sinon-chrome.min.js"></script>
 
   <!-- include source files here... -->
   <script src="../content/content.js"></script>
   <script src="../editor/editor.js"></script>
   <script src="../background/background.js"></script>
+  
+  <!-- include jasmine files here... -->
+  <link rel="stylesheet" href="jasmine-core/lib/jasmine-core/jasmine.css">
+  <script src="jasmine-core/lib/jasmine-core/jasmine.js"></script>
+  <script src="jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+  <script src="jasmine-core/lib/jasmine-core/boot.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ContentSpec.js"></script>
