Move extension source code into single folder and simplify Gulpfile

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -8,9 +8,9 @@
   <script src="sinon-chrome/bundle/sinon-chrome.min.js"></script>
 
   <!-- include source files here... -->
-  <script src="../content/content.js"></script>
-  <script src="../editor/editor.js"></script>
-  <script src="../background/background.js"></script>
+  <script src="../src/content/content.js"></script>
+  <script src="../src/editor/editor.js"></script>
+  <script src="../src/background/background.js"></script>
   
   <!-- include jasmine files here... -->
   <link rel="stylesheet" href="jasmine-core/lib/jasmine-core/jasmine.css">
